--- a/NewMsBooksQt/NewMsBooksQt.vcxproj
+++ b/NewMsBooksQt/NewMsBooksQt.vcxproj
@@ -122,6 +122,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Books.cpp" />
+    <ClCompile Include="Disturbuter.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MassoudBooksSr.pb.cc" />
     <ClCompile Include="NewMsBooksQt.cpp" />
@@ -134,6 +135,12 @@
   <ItemGroup>
     <ClInclude Include="Book.h" />
     <ClInclude Include="Books.h" />
+    <QtMoc Include="Disturbuter.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|x64'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="MassoudBooksSr.pb.h" />
     <ClInclude Include="TheSerializationClass.h" />
     <QtMoc Include="NewMsBooksQt.h" />
